# franka_fr3

./: MUJOCO.md  README.md
fr3_controller/: CMakeLists.txt  GENERATE_CONTROLLER.md  fr3_plugin.xml  generate_fr3_controller.py  package.xml
fr3_controller/config/: fr3_ros_controllers.yaml
fr3_controller/include/fr3_controller/: test_fr3_controller.hpp
fr3_controller/include/fr3_controller/utils/: motion_primitives.h
fr3_controller/launch/: fr3_controller.launch.py
fr3_controller/src/: test_fr3_controller.cpp
fr3_controller/src/utils/: dyros_math.cpp  motion_primitives.cpp
fr3_description/: CMakeLists.txt  package.xml
fr3_description/launch/: visualize_fr3.launch.py
fr3_description/mjcf/: dual_fr3.xml.xacro  single_fr3.xml.xacro
fr3_description/robots/: dual_fr3.srdf.xacro  dual_fr3.urdf.xacro  single_fr3.srdf.xacro  single_fr3.urdf.xacro
